eagle_test/error/semicolon_error.eagle
var a = 1 // expected: [Error at line 1] At the end: Expect ';' after variable declaration